2015-08-06  Franz Holzinger  <kontakt@fholzinger.com>
	* update for static_info_tables 6.2.1 and TYPO3 6.2 and 7.0

2006-12-19  Franz Holzinger  <kontakt@fholzinger.com>
	* enable the function to load additional TCA to allow fields added from the language specific static_info_tables derivates
	* Added a ChangeLog file