@@ -12,14 +12,14 @@ $EM_CONF[$_EXTKEY] = Array (
 	'description' => 'Italian (it) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '6.2.1',
+	'version' => '6.2.2',
 	'priority' => '',
 	'loadOrder' => '',
 	'module' => '',
 	'state' => 'stable',
 	'uploadfolder' => 0,
 	'createDirs' => '',
-	'modify_tables' => '',
+	'modify_tables' => 'static_countries,static_languages,static_currencies,static_territories',
 	'clearcacheonload' => 1,
 	'lockType' => '',
 	'author' => 'Franz Holzinger',
