@@ -237,19 +237,19 @@ UPDATE static_countries SET cn_short_it='Zambia' WHERE cn_iso_2='ZM';
 UPDATE static_countries SET cn_short_it='Zimbabwe' WHERE cn_iso_2='ZW';
 UPDATE static_countries SET cn_short_it='Palestina' WHERE cn_iso_2='PS';
 UPDATE static_countries SET cn_short_it='Serbia e Montenegro' WHERE cn_iso_2='CS';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='AX';
+UPDATE static_countries SET cn_short_it='Isole Åland' WHERE cn_iso_2='AX';
 UPDATE static_countries SET cn_short_it='Isole Heard ed Isole McDonald' WHERE cn_iso_2='HM';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='ME';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='RS';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='JE';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='GG';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='IM';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='MF';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='BL';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='BQ';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='CW';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='SX';
-UPDATE static_countries SET cn_short_it='' WHERE cn_iso_2='SS';
+UPDATE static_countries SET cn_short_it='Montenegro' WHERE cn_iso_2='ME';
+UPDATE static_countries SET cn_short_it='Serbia' WHERE cn_iso_2='RS';
+UPDATE static_countries SET cn_short_it='Jersey' WHERE cn_iso_2='JE';
+UPDATE static_countries SET cn_short_it='Guernsey' WHERE cn_iso_2='GG';
+UPDATE static_countries SET cn_short_it='Isola di Man' WHERE cn_iso_2='IM';
+UPDATE static_countries SET cn_short_it='Saint Martin' WHERE cn_iso_2='MF';
+UPDATE static_countries SET cn_short_it='Saint-Barthélemy' WHERE cn_iso_2='BL';
+UPDATE static_countries SET cn_short_it='Bonaire, Sint Eustatius, Saba' WHERE cn_iso_2='BQ';
+UPDATE static_countries SET cn_short_it='Curaçao' WHERE cn_iso_2='CW';
+UPDATE static_countries SET cn_short_it='Sint Maarten' WHERE cn_iso_2='SX';
+UPDATE static_countries SET cn_short_it='Sudan del Sud' WHERE cn_iso_2='SS';
 
 ## static_currencies
 UPDATE static_currencies SET cu_name_it='Dirham degli Emirati Arabi Uniti',cu_sub_name_it='' WHERE cu_iso_3='AED';
@@ -398,7 +398,7 @@ UPDATE static_currencies SET cu_name_it='Scellino Ugandese',cu_sub_name_it='' WH
 UPDATE static_currencies SET cu_name_it='Dollaro Statunitense',cu_sub_name_it='' WHERE cu_iso_3='USD';
 UPDATE static_currencies SET cu_name_it='Peso Uruguayo uruguaiano',cu_sub_name_it='' WHERE cu_iso_3='UYU';
 UPDATE static_currencies SET cu_name_it='Sum dell’Uzbekistan',cu_sub_name_it='' WHERE cu_iso_3='UZS';
-UPDATE static_currencies SET cu_name_it='',cu_sub_name_it='' WHERE cu_iso_3='VEF';
+UPDATE static_currencies SET cu_name_it='Bolivar Venezuelano',cu_sub_name_it='' WHERE cu_iso_3='VEF';
 UPDATE static_currencies SET cu_name_it='Dong Vietnamita',cu_sub_name_it='' WHERE cu_iso_3='VND';
 UPDATE static_currencies SET cu_name_it='Vatu di Vanuatu',cu_sub_name_it='' WHERE cu_iso_3='VUV';
 UPDATE static_currencies SET cu_name_it='Tala della Samoa Occidentale',cu_sub_name_it='' WHERE cu_iso_3='WST';
@@ -408,7 +408,7 @@ UPDATE static_currencies SET cu_name_it='Franco CFA BCEAO',cu_sub_name_it='' WHE
 UPDATE static_currencies SET cu_name_it='Franco CFP',cu_sub_name_it='' WHERE cu_iso_3='XPF';
 UPDATE static_currencies SET cu_name_it='Rial dello Yemen',cu_sub_name_it='' WHERE cu_iso_3='YER';
 UPDATE static_currencies SET cu_name_it='Rand Sudafricano',cu_sub_name_it='' WHERE cu_iso_3='ZAR';
-UPDATE static_currencies SET cu_name_it='',cu_sub_name_it='' WHERE cu_iso_3='ZMW';
+UPDATE static_currencies SET cu_name_it='Kwacha dello Zambia',cu_sub_name_it='' WHERE cu_iso_3='ZMW';
 UPDATE static_currencies SET cu_name_it='Dollaro dello Zimbabwe',cu_sub_name_it='' WHERE cu_iso_3='ZWD';
 UPDATE static_currencies SET cu_name_it='Afgani',cu_sub_name_it='' WHERE cu_iso_3='AFN';
 UPDATE static_currencies SET cu_name_it='',cu_sub_name_it='' WHERE cu_iso_3='RSD';
